# blog_platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: category.yaml  tag.yaml
docker/: docker-compose.local.yml  docker-compose.yml
docker/nginx/: default.conf
docker/python/: Dockerfile  start-web.sh
src/apps/account/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
src/apps/account/management/commands/: initadmin.py
src/apps/account/migrations/: 0001_initial.py
src/apps/blog/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
src/apps/blog/migrations/: 0001_initial.py  0002_tag.py  0003_post.py  0004_post_is_published.py  0005_comment.py  0006_alter_tag_title.py  0007_alter_category_title.py  0008_tag_author.py  0009_category_author.py  0010_comment_author.py
src/config/: swagger.py  urls.py
src/config/settings/: __init__.py  auth.py  base.py  cors.py  database.py  email.py  rest_framework.py  swagger.py
src/utils/: functions.py
src/utils/base/: models.py
